Modules/css/angled-windows.css
.angled-window, .angled-window-body, .angled-window-body-content, .angled-window > .panel  { /* fix for sudden margins when using resizeable with bootstrap */
  -webkit-box-sizing: content-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: content-box;    /* Firefox, other Gecko */
	box-sizing: content-box;         /* Opera/IE 8+ */
}

.angled-window-title { font-size: 16px; }

/** Window minimize and expansion transition **/
.angled-window {
  max-height: 1000px;
  overflow: hidden;
  webkit-transition: max-height .4s ease;
  -moz-transition: max-height .4s ease;
  -o-transition: height .4s ease;
  transition: max-height .4s ease;
}

/** Minimum sizes for resizing / starting width **/
.angled-window > .panel {
  min-height: 135px;
  min-width: 250px;
  width: 300px;
  overflow: hidden;
}

/** Minimum inside height and width, scroll content when needed **/
.angled-window-body-content {
  min-height: 18px;
  min-width: 220px;
  height: 300px;
  overflow: scroll;
}

/** Hide content falling outside of window 
.panel { overflow: hidden; }**/

/** For animated transitions **/
.angled-window.rolled-up, .angled-window.rolled-up-add.rolled-up-add-active, .angled-window.rolled-up-remove{
  max-height: 44px;
}

.angled-window.rolled-up-add, .angled-window.rolled-up-remove.rolled-up-remove-active {
  max-height: 1000px;
}

/** Appropriate mouse cursors **/
.cursor-move { cursor: move; }
.cursor-pointer { cursor: pointer; }

